@@ -20,7 +20,6 @@ Description: A minimal layout
 // along with this program; if not, write to the Free Software
 // Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 */
-*/
 
 * {
 	font-family: verdana, sans-serif;
